--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/localize": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/platform-server": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@nguniversal/express-engine": "^13.1.1",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
     "express": "^4.15.2",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
